--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -25,3 +25,15 @@
 .character p {
     margin-left: 5px
 }
+
+.fa-plus {
+    margin: 15px 5px;
+    padding: 5px;
+}
+
+.fa-plus:hover {
+    background: purple;
+    border-radius: 15px;
+    padding: 5px;
+    color: whitesmoke;
+}
