displaying devotions on the view

--- a/src/components/character/views/components/editPair.css
+++ b/src/components/character/views/components/editPair.css
@@ -14,5 +14,9 @@
 .valueInput {
     width: 25%;
     position: unset !important;
+    text-align: right;
+}
+
+.border-right {
     border-left: 1px solid #799aa4;
 }
